refactor: Lotto 생성 시 numbers 정렬 로직 추가