@@ -3,6 +3,7 @@ package lotto.model;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static lotto.utils.ExceptionConstants.LottoMachineException.BONUS_NUMBER_MUST_BE_UNIQUE;
@@ -15,7 +16,7 @@ class LottoWinningMachineTest {
     @DisplayName("보너스 번호가 당첨 번호에 중복되면 예외가 발생한다")
     void throwExceptionByBonusNumberIsNotUnique() {
         // given
-        final List<Integer> winningNumbers = List.of(1, 2, 3, 4, 5, 6);
+        final List<Integer> winningNumbers = Arrays.asList(1, 2, 3, 4, 5, 6);
         final int bonusNumber = 1;
 
         // when - then
@@ -28,7 +29,7 @@ class LottoWinningMachineTest {
     @DisplayName("LottoWinningMachine을 생성한다")
     void success() {
         // given
-        final List<Integer> winningNumbers = List.of(1, 2, 3, 4, 5, 6);
+        final List<Integer> winningNumbers = Arrays.asList(1, 2, 3, 4, 5, 6);
         final int bonusNumber = 7;
 
         // when
